--- a/Proyecto_Municipalidad_SanIsidro/Infraestructura.Data.SQL/Infraestructura.Data.SQL.csproj
+++ b/Proyecto_Municipalidad_SanIsidro/Infraestructura.Data.SQL/Infraestructura.Data.SQL.csproj
@@ -87,6 +87,14 @@
     <Compile Include="EVENTO.cs">
       <DependentUpon>AtencionCiudadano.tt</DependentUpon>
     </Compile>
+    <Compile Include="GestionCatastral\ADGeolocalizacion.cs" />
+    <Compile Include="GestionCatastral\ADLote.cs" />
+    <Compile Include="GestionCatastral\ADManzana.cs" />
+    <Compile Include="GestionCatastral\ADPredio.cs" />
+    <Compile Include="GestionCatastral\ADPropuestaInspeccion.cs" />
+    <Compile Include="GestionCatastral\ADSolicitud.cs" />
+    <Compile Include="GestionCatastral\ADTipoSolicitud.cs" />
+    <Compile Include="GestionCatastral\ADZona.cs" />
     <Compile Include="HOJARESPUESTA.cs">
       <DependentUpon>AtencionCiudadano.tt</DependentUpon>
     </Compile>
