--- a/Proyecto_Municipalidad_SanIsidro/Infraestructura.Data.SQL/Infraestructura.Data.SQL.csproj
+++ b/Proyecto_Municipalidad_SanIsidro/Infraestructura.Data.SQL/Infraestructura.Data.SQL.csproj
@@ -95,6 +95,7 @@
     <Compile Include="GestionCatastral\ADSolicitud.cs" />
     <Compile Include="GestionCatastral\ADTipoSolicitud.cs" />
     <Compile Include="GestionCatastral\ADZona.cs" />
+    <Compile Include="GestionCatastral\ADUsuario.cs" />
     <Compile Include="HOJARESPUESTA.cs">
       <DependentUpon>AtencionCiudadano.tt</DependentUpon>
     </Compile>
