fix estado de proyecto para actualizar cronograma

--- a/Repositorio_SanIsidro_201502/Proyecto_Municipalidad_SanIsidro/ObrasPublicas/ObrasPublicas.csproj
+++ b/Repositorio_SanIsidro_201502/Proyecto_Municipalidad_SanIsidro/ObrasPublicas/ObrasPublicas.csproj
@@ -497,6 +497,7 @@
     <Content Include="Images\imgtemplate\credit\paypal2.png" />
     <Content Include="Images\imgtemplate\credit\visa.png" />
     <Content Include="Images\imgtemplate\default-50x50.gif" />
+    <Content Include="Images\imgtemplate\default-user.gif" />
     <Content Include="Images\imgtemplate\icons.png" />
     <Content Include="Images\imgtemplate\photo1.png" />
     <Content Include="Images\imgtemplate\photo2.png" />
