--- a/Proyecto_Municipalidad_SanIsidro/GAC/Web.config
+++ b/Proyecto_Municipalidad_SanIsidro/GAC/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-   
-  <add name="MUNI_INTEGRADOEntities" connectionString="metadata=res://*/Models.Entity.MUNI_INTEGRADOEntities.csdl|res://*/Models.Entity.MUNI_INTEGRADOEntities.ssdl|res://*/Models.Entity.MUNI_INTEGRADOEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=MUNI_INTEGRADO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="MUNI_INTEGRADOEntities" connectionString="metadata=res://*/Models.Entity.MUNI_INTEGRADOEntities.csdl|res://*/Models.Entity.MUNI_INTEGRADOEntities.ssdl|res://*/Models.Entity.MUNI_INTEGRADOEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=MUNI_INTEGRADO;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
