--- a/Proyecto_Municipalidad_SanIsidro/Infraestructura.Data.SQL/Infraestructura.Data.SQL.csproj
+++ b/Proyecto_Municipalidad_SanIsidro/Infraestructura.Data.SQL/Infraestructura.Data.SQL.csproj
@@ -87,6 +87,7 @@
     <Compile Include="EVENTO.cs">
       <DependentUpon>AtencionCiudadano.tt</DependentUpon>
     </Compile>
+    <Compile Include="GestionCatastral\ADEmpleado.cs" />
     <Compile Include="GestionCatastral\ADGeolocalizacion.cs" />
     <Compile Include="GestionCatastral\ADLote.cs" />
     <Compile Include="GestionCatastral\ADManzana.cs" />
